# zihuan-next_aibot-800b

./: .gitignore  Cargo.toml  README.md  config.yaml.example  example.json  main.py  pyproject.toml
.github/: copilot-instructions-adapter.md  copilot-instructions-config.md  copilot-instructions-event.md  copilot-instructions-message-store.md  copilot-instructions-models.md  copilot-instructions-node.md  copilot-instructions-utils.md  copilot-instructions.md
bot_adapter/: adapter.py  event.py
bot_adapter/models/: event_model.py  message.py  message_model.py
database/: __init__.py  main.py
database/models/: message_record.py
docker/redis/: docker-compose.yaml
document/: architecture.md  node-development.md  node-graph-json.md  program-execute-flow.md  user-guide.md
document/node/: node-development.md  node-lifecycle.md
migrations/versions/: e8c7d6f2b123_make_at_target_nullable.py
node_macros/: Cargo.toml
node_macros/src/: lib.rs
src/: config.rs  main.rs
src/bot_adapter/: adapter.rs  event.rs  extract_message_from_event.rs  message_event_to_string.rs  message_store.rs  mod.rs  node_impl.rs
src/bot_adapter/models/: event_model.rs  message.rs  mod.rs
src/llm/: api.rs  llm_api.rs  mod.rs
src/llm/agent/: brain.rs  chat.rs  mod.rs
src/llm/function_tools/: chat_history.rs  code_writer.rs  math.rs  mod.rs  nl_reply.rs
src/node/: data_value.rs  database_nodes.rs  graph_io.rs  message_nodes.rs  mod.rs  registry.rs  util_nodes.rs
src/ui/: graph_window.slint  macos_menu.rs  mod.rs  node_graph_view.rs  selection.rs  theme.slint  window_state.rs
src/ui/node_render/: message_list_data.rs  mod.rs  preview_string.rs  string_data.rs
src/util/: message_store.rs  mod.rs
utils/: config_loader.py  logging_config.py
