[package]
name = "zihuan_next_aibot-800b"
version = "0.1.0"
edition = "2021"
description = "A bot for daily helper and coding helper, support for adapter qq bot, web, edge devices"
authors = ["FredYakumo"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
