[package]
name = "zihuan_next_aibot-800b"
version = "0.1.0"
edition = "2021"
description = "A bot for daily helper and coding helper, support for adapter qq bot, web, edge devices"
authors = ["FredYakumo"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
log = "0.4"
log_util = { git = "https://github.com/FredYakumo/LogUtil" }
lazy_static = "1.4"
futures-util = "0.3"
http = "1.0"

redis = { version = "0.24", features = ["tokio-comp"] }
reqwest = { version = "0.12.25", features = ["blocking", "json"] }
